BRABO-263: Fix scrollbars in network tab (+monospace font in data view)

--- a/gui/src/main/resources/org/brabocoin/brabocoin/gui/brabocoin.css
+++ b/gui/src/main/resources/org/brabocoin/brabocoin/gui/brabocoin.css
@@ -46,7 +46,7 @@
     -fx-text-fill: derive(-fx-text-inner-color, 110%);
 }
 
-.hash {
+.hash, .monospace {
     -fx-font-family: monospace;
 }
 
